# fitness-cli

./: .gitignore  README.md  ai-starter-basics.md  normalise.py  pyproject.toml  set_calendar_month.py  wallpaper-template-spec.json
.github/: copilot-instructions.md
src/fitness_cli/: __main__.py
src/fitness_cli/cli/: activity_commands.py  wallpaper_commands.py
src/fitness_cli/config/: settings.py
src/fitness_cli/database/: connection.py  models.py
src/fitness_cli/display/: activity_table.py  calendar_display.py
src/fitness_cli/operations/: activity_operations.py  milestone_operations.py
src/fitness_cli/svg/: calendar_svg.py  medals_svg.py  raster.py  svg_editor.py  title_svg.py
tests/: test_activity_operations.py  test_calendar_svg.py  test_database.py  test_display.py  test_medals_svg.py  test_milestone_operations.py  test_raster.py  test_title_svg.py  test_wallpaper_commands.py
