[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-cli"
version = "0.2.0"
description = "CLI tool to record fitness activities and generate a monthly SVG wallpaper."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "lxml>=5.0",
    "rich>=13.0",
]

[project.scripts]
fitness-cli = "fitness_cli.__main__:main"
fcli = "fitness_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pylint>=3.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "lxml-stubs>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pylint.MASTER]
extension-pkg-allow-list = ["lxml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
